@@ -23,4 +23,4 @@ EXPORTS
 	DoFeatures
 	AllowBit
 	AddProperty
-	
+	SetAllowDisconn
