@@ -26,7 +26,7 @@ using System.Runtime.CompilerServices;
 // You can specify all the values or you can default the Revision and Build Numbers 
 // by using the '*' as shown below:
 
-[assembly: AssemblyVersionAttribute("0.1.32.*")]
+[assembly: AssemblyVersionAttribute("0.1.33.*")]
 
 //
 // In order to sign your assembly you must specify a key to use. Refer to the 
